B-F Backup Sandbox 30.4.12/src/objects/Wombat_Mobile_Config__c.object
<CustomObject>
    <description>All objects and fields to build and synchronise Client database.</description>
    <fields>
        <fullName>CreateOrder__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The position of this Object in the creation of the client database.</description>
        <label>CreateOrder</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_SOQL__c</fullName>
        <label>Create SOQL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGraveyardable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsGraveyardable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>The System API name of the object</description>
        <label>Object API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Name of the object to synchronise with client</description>
        <label>Object Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceiveDataFromClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReceiveDataFromClient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Select_SOQL__c</fullName>
        <label>Select_SOQL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Select_SOQL_for_Sync_Update__c</fullName>
        <description>This is the Select SOQL statement that the wombat_Sync APEX web service method uses to return the fields that are for Wombat app.</description>
        <label>Select SOQL for Sync Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SendDataToClient__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SendDataToClient</label>
        <type>Checkbox</type>
    </fields>
    <label>Wombat Mobile Config</label>
    <listViews>
        <fullName>View_Name</fullName>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>CreateOrder__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsGraveyardable__c</columns>
        <filterScope>Everything</filterScope>
        <label>View Name</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MCN-{0}</displayFormat>
        <label>Mobile Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wombat Mobile Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>